# doe-sangue

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
backend/doe_sangue_backend/: .env  Cargo.toml  configuration.yaml
backend/doe_sangue_backend/.github/workflow/: rust.yaml
backend/doe_sangue_backend/.github/workflows/: general.yaml
backend/doe_sangue_backend/migrations/: 20210301133224_create_subscriptions_table.sql
backend/doe_sangue_backend/scripts/: init_db.sh
backend/doe_sangue_backend/src/: main.rs  startup.rs
backend/doe_sangue_backend/src/routes/: mod.rs  users.rs
backend/doe_sangue_backend/tests/api/: helpers.rs
configuration/: base.yaml
migrations/: 20210301133224_create_users_table.sql
src/: main.rs  startup.rs
src/routes/: mod.rs  users.rs
tests/api/: helpers.rs  main.rs  users.rs
